--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           </div>
           <div class="social-links">
             <a href="#" class="social-link">GitHub</a>
-            <a href="#" class="social-link">LinkedIn</a>
+            <a href="" class="social-link">LinkedIn</a>
             <a href="#" class="social-link">Twitter</a>
           </div>
         </div>
